# TensorQuadOperation

./: .gitignore  .gitmodules  CMakeLists.txt  compile.sh  gE<_site[[1, 0], [0, 0]].tt  install_extern.bash  install_extern.sh  run_test.sh
include/: mat_decomp.h  matrix.h  mpo_base.h  mps_base.h  tensor.h  tt_base.h  type_double_double.h  utc.h
test/: test.cpp  test_Mat_QR.cpp  test_Mat_SVDDecomp.cpp  test_Tensor3D.cpp  test_compress_svd.cpp  test_mpo.cpp  test_mps.cpp  test_tt_base.cpp
